# QuantumQA

./: .gitignore  API_DOCUMENTATION.md  API_QUICK_START.md  BROWSER_REUSE_GUIDE.md  README.md  TODO.md  api_complete.py  api_server.py  pyproject.toml  quantumqa_runner.py  requirements.txt  run_fallback_test.py  run_quantum_test.py  run_test.py  run_vision_test.py  start_chrome_debug.py
credentials/: 18b7a7d8-3082-48b1-aef2-e45526d3c72a.json  547359e6-f392-4e52-ba7c-eb9cb01825e4.json
docs/: AGENT_WORKFLOW_DESIGN.md  API_TESTING_ROADMAP.md  ARCHITECTURE.md  ARCHITECTURE_ASCII.md  ARCHITECTURE_DIAGRAM.md  HIGH_LEVEL_DESIGN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  LOW_LEVEL_DESIGN.md  POC_README.md  SECURITY.md  TECHNOLOGY_STACK.md  UI_TESTING_ROADMAP.md
examples/: chatbot_with_login.txt  conversation_with_login.txt  conversation_with_login_complete.txt  create_build_project.txt  e2e_complex_ui.txt  e2e_form_test.txt  e2e_google_search.txt  export_testmo_results.txt  performance_comparison.txt  testmo-export-run-87.csv  vision_demo.txt
front-end/: .gitignore  package-lock.json  package.json
generated_instructions/: Converse_detailed.txt  testmo_generated_instructions.txt
logs/: login_test_run_1.txt  login_test_run_1_creds.yaml  test_with_stored_creds.txt  test_with_stored_creds_creds.yaml
quantumqa/: __init__.py
reports/: login_test_run_1.txt  test_with_stored_creds.txt
scripts/: parse_testmo_export.py  run_api_test.py  run_chrome_simple.py  run_chrome_test.py  run_custom_test.py  run_generic_test.py  run_real_browser_test.py  (+6 more)
(+80 files in other folders)
