[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantumqa"
version = "0.1.0"
description = "Lightweight agentic UI testing framework"
authors = [{name = "QuantumQA Team", email = "hello@quantumqa.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "openai>=1.3.8",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "mypy>=1.7.1",
    "pytest-asyncio>=0.21.1",
]
vision = [
    "opencv-python>=4.8.1.78",
    "numpy>=1.24.3"
]

# Optional security extension
security = [
    "cryptography>=41.0.0"
]

# Installation bundles  
full = ["quantumqa[dev,vision,security]"]

[project.scripts]
quantumqa = "quantumqa.cli:main"

[project.urls]
Homepage = "https://github.com/quantumqa/quantumqa"
Repository = "https://github.com/quantumqa/quantumqa.git"
Documentation = "https://quantumqa.readthedocs.io"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
